Added a current frame and coordinate label, changed the widget for setting current movie

--- a/Image_processing.ipynb
+++ b/Image_processing.ipynb
@@ -187,7 +187,8 @@
     "    bg_sub=cv2.createBackgroundSubtractorMOG2(history=train_frames,detectShadows=True) \n",
     "    bg_sub=train_bg_subtractor(cap, bg_sub,train_frames) # pre-training\n",
     "    # codec for video writing, see: https://www.pyimagesearch.com/2016/02/22/writing-to-video-with-opencv/\n",
-    "    fourcc = cv2.VideoWriter_fourcc(*\"MJPG\") \n",
+    "    #fourcc = cv2.VideoWriter_fourcc(*\"MJPG\") \n",
+    "    fourcc= cv2.CV_FOURCC( '3', 'I', 'V', 'D');\n",
     "    # the video writer is defined by output filename, selected codec, the fps selected is the same as the input video, \n",
     "    # frame size that is also identical to input video, and a boolean specific whether to save a color video:\n",
     "    writer = cv2.VideoWriter(output_vid, fourcc, cap.get(cv2.CAP_PROP_FPS), (SHAPE[1], SHAPE[0]), True)\n",
@@ -552,15 +553,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] elasped time: 142.93\n",
-      "[INFO] approx. FPS: 39.17\n"
+      "[INFO] elasped time: 96.75\n",
+      "[INFO] approx. FPS: 57.86\n"
      ]
     }
    ],
